Error fixed for illegal start of expression in db initializer